# research-on-llms

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
bsebot/: __init__.py  cli.py  config.py  db.py  llm.py
docs/superpowers/plans/: 2026-05-17-bsebot-plan-1-foundation.md  2026-05-17-bsebot-plan-2-data-pipeline.md  2026-05-17-bsebot-plan-3-agent-trading.md  2026-05-17-bsebot-plan-4-distribution.md
docs/superpowers/specs/: 2026-05-17-bsebot-design.md
migrations/: 001_initial.sql
scripts/: setup.sh
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_llm.py
